tests/bad/incorrect_labelled_param.ae
/// fail: Argument label 'incorrect' does not match parameter name 'does_exist'

def foo(val: i32, does_exist: bool): i32 {
    return val
}

def main() {
    let x = foo(1, true)
    let y = foo(2, incorrect: false)
}